# controllers/Clase_controlador.go
@@ -20,6 +20,17 @@ func NewClaseControlador(servicio *services.ClaseService) *ClaseControlador {
 }
 
 // ObtenerClasesPorUnidad obtiene todas las clases de una unidad.
+// @Summary Devuelve las clases de una unidad
+// @Description Devuelve todas las clases asociadas a una unidad
+// @Tags Clases
+// @Accept json
+// @Produce json
+// @Param id path string true "ID de la unidad"
+// @Success 200 {array} response.ClaseResponse
+// @Failure 400 {object} response.ErrorResponse
+// @Failure 404 {object} response.ErrorResponse
+// @Failure 500 {object} response.ErrorResponse
+// @Router /api/unidades/{id}/clases [get]
 func (cc *ClaseControlador) ObtenerClasesPorUnidad(c *gin.Context) {
 	id := c.Param("id") // ID de la unidad
 
@@ -37,6 +48,17 @@ func (cc *ClaseControlador) ObtenerClasesPorUnidad(c *gin.Context) {
 }
 
 // CrearClaseParaUnidad crea una nueva clase asociada a una unidad.
+// @Summary Crear una clase para una unidad
+// @Description Agrega una clase a la base de datos asociada a una unidad
+// @Tags Clases
+// @Param id path string true "ID de la unidad"
+// @Param clase body request.CreateClaseRequest true "Clase a crear"
+// @Accept json
+// @Produce json
+// @Success 200 {object} response.CrearClase
+// @Failure 400 {object} response.ErrorResponse
+// @Failure 500 {object} response.ErrorResponse
+// @Router /api/unidades/{id}/clases [post]
 func (cc *ClaseControlador) CrearClaseParaUnidad(c *gin.Context) {
 	unidadID := c.Param("id") // ID de la unidad
 
