# request/request.go
@@ -16,3 +16,19 @@ type UpdateValoracionRequest struct {
 type CreateUnidadRequest struct {
 	Nombre string `json:"nombre" binding:"required"`
 }
+
+// CreateClaseRequest define los parámetros necesarios para crear una clase.
+type CreateClaseRequest struct {
+	Nombre      string `json:"nombre" binding:"required"`
+	Descripcion string `json:"descripcion" binding:"required"`
+	VideoURL    string `json:"video_url" binding:"required"`
+}
+
+// CreateComentarioRequest define los parámetros necesarios para crear un comentario.
+type CreateComentarioRequest struct {
+	Autor     string `json:"autor" binding:"required"`
+	Titulo    string `json:"titulo" binding:"required"`
+	Detalle   string `json:"detalle" binding:"required"`
+	MeGusta   int    `json:"me_gusta" binding:"required"`
+	NoMeGusta int    `json:"no_me_gusta" binding:"required"`
+}
